--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ Productos</a>
 <section class="banner">
 		<div class="banner-content">
 			<h1>Productos 100% reciclados, porque Reciclar es la Moda</h1>
-			<a href="file:///C:/Users/Berna%20Su%C3%A1rez/Desktop/SOBRE%20NOSOTR0.html">Sobre Nosotros</a>	
+			<a href="https://bernardosuareez.github.io/Milleu-Shop-Sobre-Nosotros/">Sobre Nosotros</a>	
 		</div>
 	</section>
 	
